# evtol-vertiport-rl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
configs/: diffusion.yaml  diffusion_12km.yaml  diffusion_12km_zpin_weighted.yaml  env.yaml  od.yaml  od_12km.yaml  ppo_vertiport.yaml  ppo_vertiport_demand.yaml  preprocess.yaml  spatial.yaml
data/: raw
data/synthetic/: od_samples_agg_source.txt
docs/: decisions.md  progress.md  stage2_summary.md  stage3_summary.md  整体架构简述.md
docs/plan/: stage1_data_cleaning.md  stage2_spatial_discretization.md  stage3_od_construction.md  stage4_diffusion.md  (+3 more)
experiments/: run_stage1_area_bounds.py  run_stage1_clean.py  run_stage1_eda.py  run_stage2_build.py  run_stage2_maps.py  run_stage3_build.py  run_stage3_eda.py  run_stage3_sensitivity.py  run_stage3_smoke.py  run_stage4_bootstrap.py  run_stage4_compare_scenarios.py  run_stage4_dataset_smoke.py  run_stage4_diag_posthoc.py  run_stage4_guidance_ablation.py  run_stage4_model_smoke.py  run_stage4_norm_ablation.py  run_stage4_posthoc_calibrate.py  run_stage4_train.py  run_stage4_train_smoke.py  run_stage5_env_smoke.py  run_stage5_maskableppo_smoke.py  run_stage6_diagnostics.py  run_stage6_formulation_audit.py  run_stage6_train.py
src/: constants.py
tests/: test_bootstrap_od.py  test_candidates.py  test_clean.py  test_diffusion.py  test_ema.py  test_formulation_audit.py  test_greedy_baseline.py  test_metrics_dist.py  test_od.py  test_od_dataset.py  test_posthoc_calibration.py  test_spatial.py  test_vertiport_env.py  test_zones.py
(+74 files in other folders)
